# docker

cpp/: Dockerfile  Dockerfile_bak
cpp/Server/document/: 命令码及消息协议列表.docx
cpp/Server/trunk/: build.sh
cpp/Server/trunk/chatsvr/: CFieldName.d  CUserGroupinfo.d  ChatCommon.cpp  ChatCommon.d  ChatCommon.h  ChatLogic.d  ChatMongoMgr.d  ChatRedisMgr.d  ChatServerApp.cpp  ChatServerApp.d  CommonLogic.d  Config.d  ConnectionMgr.d  DBTools.d  GateEvent.d  GroupAssistLogic.d  KeywordMgr.d  Makefile  RoomManager.d  TChatSvrHandler.cpp  TChatSvrHandler.d  TChatSvrHandler.h  TChatSvrIf_constants.d  TRSpeex.d  TTpPushSvrIf_types.d  UserObj.d  chatsvr.sln  chatsvr.vcproj  cmd_error.d  common.d  fifo.d  ipdatabase.d  main.d  trie_tree.d
cpp/Server/trunk/consumesvr/: CAlarmNotify.d  CLogThread.d  CRedPacketMgr.cpp  CRedPacketMgr.d  CRedPacketMgr.h  ConsumeApp.cpp  ConsumeApp.d  DBmongoConnection.d  Makefile  PressStampMgr.d  PressStampMgr.h  RoomObj.d  TChatSvr.d  TCommonIf_types.d  TConsumeSvrHandler.cpp  TConsumeSvrHandler.d  TConsumeSvrIf_constants.d  TConsumeSvrIf_types.d  TRoomSvrIf_constants.d  TRoomSvrIf_types.d  TreasureMgr.cpp  TreasureMgr.d  TreasureMgr.h  main.d  redisMgr.d  redis_map_zset_base.d  redisdataHelper.d
cpp/Server/trunk/document/: IM.txt
cpp/Server/trunk/etc/: MakeComm  chatsvr_mc.conf  dev_apns_cert.pcm_sandbox  gateway_mc.conf  giftsvr.conf  logonsvr_mc.conf  roomsvr_mc.conf  tppushsvr_mc.conf  usermgrsvr_mc.conf  webgate_mc_cmdparam.conf
cpp/Server/trunk/gatecomm/: CClientItem.h  CClientLogic.cpp  CClientLogic.h  CClientManager.cpp  CClientManager.h  CCmdConfigMgr.h  CRoomEvent.cpp  CRoomEvent.h  CSvrConnMgr.cpp  CSvrConnMgr.h  CSvrEvent.cpp  CUsermgrEvent.cpp  GateBase.cpp
cpp/Server/trunk/httpproxysvr/: CMakeLists.txt  epoll_socket.cpp  epoll_socket.h  http_proxy_server.cpp  node_watcher.cpp  node_watcher.h  thriftUtil.h  timer.h
cpp/Server/trunk/httpproxysvr/cmd/: httptest.cpp  httptest.h
mysql/: Dockerfile
nginx/: .Dockerfile.swp  Dockerfile  Dockerfile_bak  logstash.conf  nginx.conf  start.sh
php5.6/: Dockerfile  Dockerfile_bak  php-fpm.conf  php.ini  start.sh
php5.6/php-fpm.d/: www.conf
php7/: Dockerfile
script/: nginx_start.sh
test/: Dockerfile
(+549 files in other folders)
